# rust-caseless

./: .travis.yml  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
print-table/: Cargo.toml
print-table/src/: main.rs
src/: build.rs  case_folding_data.rs  lib.rs
