[package]
name = "caseless"
version = "0.2.2"
authors = ["Simon Sapin <simon.sapin@exyr.org>"]
description = "Unicode caseless matching"
repository = "https://github.com/SimonSapin/rust-caseless"
license = "MIT"
keywords = ["unicode", "string", "case-insensitive", "normalization", "no_std"]
categories = ["text-processing"]
readme = "README.md"

build = "src/build.rs"

[build-dependencies]
regex = "1.0"

[dependencies]
unicode-normalization = { version = "0.1", optional = true }

[features]
default = ["alloc", "normalization"]
alloc = []
normalization = ["unicode-normalization"]
